# christopher-martus-Label-Verification-app

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  render.yaml
backend/app/: main.py
backend/app/verification/: __init__.py  comparison.py  models.py  vision.py
frontend/: app.js  index.html  styles.css
scripts/: extract_label.py  run_live_checklist.py
tests/: test_batch_verify_endpoint.py  test_health.py  test_live_checklist.py  test_single_label_browser.py  test_verification_comparison.py  test_verify_endpoint.py  test_vision_readiness.py  test_vision_service.py
