[project]
name = "ttb-label-verification"
version = "0.1.0"
description = "Minimal deployable skeleton for the TTB Label Verification proof-of-concept."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pip>=25.1",
    "pytest>=8.3.0",
    "uv>=0.11.22",
]

[tool.pytest.ini_options]
pythonpath = ["."]
